test/types/file/freadIntUnopenedFile.good
freadIntUnopenedFile.chpl:4: error: halt reached - Operation attempted on an invalid file
