test/types/file/freadIntUnopenedFile.chpl
var myInt = 123;
var f: file = file(filename = "unopenedFile.txt", mode = "r");

fread(f, myInt);
